tests/safety/reject/mod_by_zero.keel
def main(sys: System); Io:
    println(5 % 0)
